@@ -2180,10 +2180,10 @@ See also: itext(), inum(), ilev(), ibreak(), map(), @dolist
     > say iter(This is a test string., strlen(%i0))
     You say, "4 2 1 4 7"
   
-    > say iter(lnum(5), mul(add(##,#@),2))
+    > say iter(lnum(5), mul(add(%i0,#@),2))
     You say, "2 6 10 14 18"
   
-    > say iter(lexits(here), name(##) (owned by [name(owner(##))]))
+    > say iter(lexits(here), name(%i0) (owned by [name(owner(%i0))]))
     You say, "South (owned by Claudia) North (owned by Roy)"
   
     > &STRLEN_FN me=strlen(%0)
@@ -2193,7 +2193,7 @@ See also: itext(), inum(), ilev(), ibreak(), map(), @dolist
   This example could be replaced by the use of map() like so:
     > say map(strlen_fun, This is a test string.)
 
-    > say iter(lnum(3), ##, ,%r)
+    > say iter(lnum(3), %i0, ,%r)
     You say, "0
     1
     2"
